# cpp-for-hep

./: .gitignore  README.md  log.txt
analysis_cpp/: README.md
analysis_cpp/01_event_reader/: README.md  main.cpp  task_solution.cpp
analysis_cpp/02_particle_selection/: README.md  main.cpp  task_solution.cpp
analysis_cpp/03_kinematic_calculations/: README.md  main.cpp  task_solution.cpp
analysis_cpp/04_summary_tables/: README.md  main.cpp  task_solution.cpp
analysis_cpp/05_cmake_project/: CMakeLists.txt  README.md  main.cpp  task_solution_CMakeLists.txt  task_solution_main.cpp
cpp/: README.md  cpp_basics_cheat_sheet.tex  log.txt
cpp/01_compile_run/: README.md  log.txt  main.cpp
cpp/02_variables_types/: README.md  main.cpp  task_solution.cpp
cpp/03_conditions_loops/: README.md  main.cpp  task_solution.cpp
cpp/04_functions/: README.md  main.cpp  task_solution.cpp
cpp/05_structs/: README.md  main.cpp  task_solution.cpp
cpp/06_vectors_strings/: README.md  main.cpp  task_solution.cpp
cpp/07_read_write_files/: README.md  main.cpp  task_solution.cpp
cpp/08_parse_text/: README.md  main.cpp  task_solution.cpp
cpp/09_headers/: README.md  four_vector.cpp  four_vector.hpp  task_solution_four_vector.cpp  task_solution_four_vector.hpp
cpp/10_cmake/: CMakeLists.txt  README.md  main.cpp  task_solution_main.cpp  (+1 more)
physics_cpp/: README.md
tools/: README.md
tools/08_linking_external_libraries/: CMakeLists.txt  README.md  main.cpp
tools/08_linking_external_libraries/notes/: external_commands.md
tools/08_linking_external_libraries/src/: simple_math.cpp
(+50 files in other folders)
